# ouroboros-fs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  run.sh
.claude/: settings.json
.claude/commands/: coverage.md  lint-rust.md  protocol-grep.md  run-stress.md
.github/workflows/: build_and_test_release_release.yml
docs/: 01_gateway_.md  02_node_.md  04_file_distribution___chunking_.md  05_network_healing___fault_tolerance_.md  06_command_protocol_.md  ARCHITECTURE.md  SECURITY.md  index.md  operations.md
samples/config/: gateway.toml  node.toml
samples/systemd/: README.md  ouroboros-gateway.service  ouroboros-node@.service  ouroboros.env
scripts/: get_nodes.sh  kill_node.sh  list_files.sh  pull_file.sh  push_file.sh
src/: auth.rs  gateway.rs  lib.rs  node.rs  node_status.rs  protocol.rs  server.rs
src-gui/ouroborosfs-vue-gui/: README.md  file_structure.json  package-lock.json  package.json
src-gui/ouroborosfs-vue-gui/src/: App.vue
src-gui/ouroborosfs-vue-gui/src/components/: DirectoryTree.vue  FileUploader.vue  NodesGraph.vue
src-gui/ouroborosfs-vue-gui/src/stores/: network.ts
tests/: auth.rs  config.rs  durability.rs  failover.rs  gateway_http.rs  heal_subprocess.rs  limits.rs  no_literal_nodes_path.rs  round_trip.rs  safety.rs  server_handlers.rs  shutdown.rs
tests/common/: mod.rs
