[package]
name = "rust_socket_server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
libc = "0.2.177"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }

[lib]
name = "ring"
path = "src/lib.rs"

[[bin]]
name = "rust_socket_server"
path = "src/bin/main.rs"
