[package]
name = "OuroborosFS"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
libc = "0.2.177"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "ouroboros_fs"
path = "src/lib.rs"

[[bin]]
name = "ouroboros_fs"
path = "src/bin/main.rs"
