[package]
name = "OuroborosFS"
version = "1.0.0-rc.1"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
libc = "0.2.177"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
sha2 = "0.10"
rand = "0.8"
toml = "0.8"

[lib]
name = "ouroboros_fs"
path = "src/lib.rs"

[[bin]]
name = "ouroboros_fs"
path = "src/bin/main.rs"

[dev-dependencies]
tempfile = "3"
rand_chacha = "0.3"
futures = "0.3"
